@@ -1,3 +1,14 @@
+#!/usr/bin/python
+
+#
+# Radio.py
+#
+# AtlaNET P2000 Receiver - By: JKCTech
+# https://github.com/jkctech/AtlaNET
+#
+# Small utils concerning the radio
+#
+
 import os
 import subprocess
 
